objects/Advanced_Team_Management__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Add_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Account_Team_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Team Triggers</label>
        <type>Checkbox</type>
    </fields>
    <label>Advanced Team Management</label>
</CustomObject>